name:               knoth
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          src/site.hs
  build-depends:    split
                  , base == 4.*
                  , hakyll == 4.9.*
  ghc-options:      -threaded
  default-language: Haskell2010
